--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@heroicons/react": "^2.1.1",
         "@hookform/resolvers": "^3.3.4",
         "@radix-ui/react-label": "^2.0.2",
         "@radix-ui/react-slot": "^1.0.2",
@@ -24,11 +23,10 @@
         "clsx": "^2.1.0",
         "lucide-react": "^0.309.0",
         "next": "14.0.3",
+        "next-themes": "^0.2.1",
         "react": "^18",
         "react-dom": "^18",
         "react-hook-form": "^7.49.3",
-        "react-icons": "^5.0.1",
-        "sharp": "^0.33.2",
         "tailwind-merge": "^2.2.0",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.22.4"
