--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@radix-ui/react-slot": "^1.0.2",
         "@radix-ui/react-tabs": "^1.0.4",
         "@radix-ui/react-toast": "^1.1.5",
+        "@stripe/stripe-js": "^2.4.0",
         "@supabase/auth-helpers-nextjs": "^0.8.7",
         "@supabase/auth-ui-react": "^0.4.7",
         "@supabase/auth-ui-shared": "^0.1.8",
@@ -29,6 +30,7 @@
         "react-dom": "^18",
         "react-hook-form": "^7.49.3",
         "react-icons": "^5.0.1",
+        "stripe": "^14.14.0",
         "tailwind-merge": "^2.2.0",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.22.4"
