--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
         "@supabase/auth-ui-shared": "^0.1.8",
         "@supabase/ssr": "^0.0.10",
         "@supabase/supabase-js": "^2.39.2",
+        "@types/crypto-js": "^4.2.2",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
+        "crypto-js": "^4.2.0",
+        "framer-motion": "^11.0.8",
         "lucide-react": "^0.309.0",
         "next": "14.0.3",
         "next-themes": "^0.2.1",
@@ -32,9 +35,7 @@
         "react-hook-form": "^7.49.3",
         "react-icons": "^5.0.1",
         "stripe": "^14.15.0",
-        "@types/crypto-js": "^4.2.2",
-        "crypto-js": "^4.2.0",
-        "tailwind-merge": "^2.2.0",
+        "tailwind-merge": "^2.2.1",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.22.4"
     },
