--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@types/crypto-js": "^4.2.2",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
+        "cookies-next": "^4.1.1",
         "crypto-js": "^4.2.0",
         "framer-motion": "^11.0.8",
         "lucide-react": "^0.309.0",
